// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Snapshots No Children 1`] = `
<label
  className="sc-bdfBwQ cuiLU"
/>
`;

exports[`Label Snapshots No props 1`] = `
<label
  className="sc-bdfBwQ cuiLU"
>
  This is a label
</label>
`;
